<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle_with_radius4"
    android:paddingVertical="@dimen/default_triple_padding">

    <TextView
        android:id="@+id/title"
        style="@style/BaseTextAppearance.ParagraphSmallBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/default_side_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/offline_dialog_title" />

    <TextView
        android:id="@+id/message"
        style="@style/BaseTextAppearance.Paragraph.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:paddingHorizontal="@dimen/default_side_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/offline_dialog_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reject"
        style="@style/AppTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_double_padding"
        android:paddingHorizontal="24dp"
        android:text="@string/exit_dialog_reject"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/approve"
        app:layout_constraintEnd_toStartOf="@id/approve"
        app:layout_constraintTop_toTopOf="@id/approve" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/approve"
        style="@style/AppTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/default_side_padding"
        android:backgroundTint="@color/button_approve_background_selector"
        android:paddingHorizontal="24dp"
        android:text="@string/exit_dialog_leave"
        android:textColor="@color/button_approve_text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message" />
</androidx.constraintlayout.widget.ConstraintLayout>
