<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_double_padding"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/errorSign"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/default_triple_padding"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_cancel"
        app:tint="?errorColor" />

    <TextView
        android:id="@+id/title"
        style="@style/BaseTextAppearance.DefaultParagraphBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/error_unknown"
        app:layout_constraintBottom_toTopOf="@id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorSign" />

    <TextView
        android:id="@+id/message"
        style="@style/BaseTextAppearance.Paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="15"
        android:text="@string/error_page_message"
        app:layout_constraintBottom_toTopOf="@id/retryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryButton"
        style="@style/AppTextButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/large_control_height"
        android:layout_marginTop="@dimen/default_triple_padding"
        android:paddingHorizontal="45dp"
        android:text="@string/error_page_retry"
        app:backgroundTint="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

</androidx.constraintlayout.widget.ConstraintLayout>
